--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -30,7 +30,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../images/hero-desktop-1x.jpg");
+    url("../img/hero-desktop-1x.jpg");
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -40,7 +40,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../images/hero-mob-1x.jpg");
+      url("../img/hero-mob-1x.jpg");
   }
   @media screen and (min-width: 768px) {
     background-image: linear-gradient(
@@ -48,7 +48,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../images/hero-tablet-1x.jpg");
+      url("../img/hero-tablet-1x.jpg");
   }
   @media screen and (min-width: 1200px) {
     padding-top: 200px;
@@ -58,7 +58,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../images/hero-desktop-1x.jpg");
+      url("../img/hero-desktop-1x.jpg");
   }
 }
 
@@ -73,7 +73,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../images/hero-mob-2x.jpg");
+      url("../img/hero-mob-2x.jpg");
   }
 }
 @media not all,
@@ -87,7 +87,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../images/hero-tablet-2x.jpg");
+      url("../img/hero-tablet-2x.jpg");
   }
 }
 
@@ -102,7 +102,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../images/hero-desktop-2x.jpg");
+      url("../img/hero-desktop-2x.jpg");
   }
 }
 
