--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,7 @@ img {
   top: 10px;
   z-index: 10;
   background-color: transparent;
+  cursor: pointer;
 }
 
 .menu__button.is-open .menu__cross {
