--- a/sass/components/_mobile_menu.scss
+++ b/sass/components/_mobile_menu.scss
@@ -7,6 +7,7 @@
   top: 10px;
   z-index: 10;
   background-color: transparent;
+  cursor: pointer;
   &.is-open {
     & .menu__cross {
       display: block;
