--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@ body {
 }
 
 ul,
-ul,
 a {
   list-style: none;
   text-decoration: none;
@@ -164,6 +163,8 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 @media screen and (min-width: 767px) {
@@ -174,12 +175,12 @@ img {
 
 .social__item {
   padding-right: 10px;
-  padding-left: 10px;
+  /*padding-left: 10px;*/
   border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .social__item:first-child {
-  padding-left: 0;
+  /*padding-left: 0;*/
 }
 
 .social__item:last-child {
@@ -369,6 +370,13 @@ img {
   }
 }
 
+.contact__list {
+	display: flex;
+	flex-direction: column-reverse;
+	gap: 32px;
+	
+}
+
 @media screen and (min-width: 767px) {
   .contact__list {
     margin-top: 0;
@@ -379,6 +387,7 @@ img {
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
+			gap: 32px;
   }
 }
 
@@ -395,17 +404,18 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+			gap: 32px;
   }
 }
 
 .contact__item {
-  text-align: left;
-  cursor: pointer;
-  margin-bottom: 32px;
+  /*text-align: left;*/
+  /*cursor: pointer;*/
+  /*margin-bottom: 32px;*/
 }
 
 .contact__item:last-child {
-  margin-bottom: 64px;
+  /*margin-bottom: 64px;*/
 }
 
 @media screen and (min-width: 767px) {
@@ -428,7 +438,7 @@ img {
 }
 
 .contact__item--margin-right {
-  margin-right: 24px;
+  /*margin-right: 24px;*/
 }
 
 .contact__item--center {
