--- a/css/main.css
+++ b/css/main.css
@@ -179,9 +179,11 @@ img {
   border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
+/*
 .social__item:first-child {
-  /*padding-left: 0;*/
+  padding-left: 0;
 }
+*/
 
 .social__item:last-child {
   padding-right: 0;
