--- a/css/main.css
+++ b/css/main.css
@@ -442,10 +442,11 @@ img {
   }
 }
 
+/*
 .contact__item--margin-right {
   /*margin-right: 24px;*/
 }
-
+*/
 .contact__item--center {
   text-align: center;
   margin-bottom: 8px;
