--- a/css/main.css
+++ b/css/main.css
@@ -444,9 +444,10 @@ img {
 
 /*
 .contact__item--margin-right {
-  /*margin-right: 24px;*/
+  margin-right: 24px;
 }
 */
+
 .contact__item--center {
   text-align: center;
   margin-bottom: 8px;
