--- a/css/main.css
+++ b/css/main.css
@@ -374,7 +374,7 @@ img {
 
 .contact__list {
 	display: flex;
-	flex-direction: column;
+	flex-direction: column-reverse;
 	gap: 32px;
 	
 }
@@ -384,11 +384,11 @@ img {
     margin-top: 0;
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
+    /*display: flex;*/
+    /*-webkit-box-orient: vertical;*/
+    /*-webkit-box-direction: reverse;*/
         -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
+            flex-direction: column;
 			gap: 32px;
   }
 }
