--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,7 @@ img {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    width: 100%;
+    /*width: 100%;*/
   }
 }
 
@@ -242,7 +242,7 @@ img {
     width: 100%;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
-            justify-content: space-between;
+            /*justify-content: space-between;*/
   }
 }
 
@@ -323,7 +323,7 @@ img {
 
 .logo {
   font-family: "Raleway";
-  font-style: normal;
+  /*font-style: normal;*/
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
