--- a/css/main.css
+++ b/css/main.css
@@ -241,7 +241,7 @@ img {
             align-items: center;
     width: 100%;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
+        /*-ms-flex-pack: justify;*/
             /*justify-content: space-between;*/
   }
 }
