--- a/css/main.css
+++ b/css/main.css
@@ -239,7 +239,7 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    width: 100%;
+    /*width: 100%;*/
     -webkit-box-pack: justify;
         /*-ms-flex-pack: justify;*/
             /*justify-content: space-between;*/
