--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,7 @@ img {
 	align-items: center
     -webkit-box-pack: justify;
 	margin-left: 93px;
+	flex-grow: 1;
         /*-ms-flex-pack: justify;*/
             /*justify-content: space-between;*/
     /*width: 100%;*/
@@ -256,6 +257,7 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+	margin-right: auto;		
     /*margin-left: 88px;*/
   }
 }
