--- a/css/main.css
+++ b/css/main.css
@@ -1378,6 +1378,7 @@ img {
      -webkit-box-pack: center;
         -ms-flex-pack: center;
       justify-content: center;
+	align-items: baseline; 
   }
 }
 
