--- a/css/main.css
+++ b/css/main.css
@@ -988,7 +988,7 @@ img {
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
-  text-align: center;
+  text-align: left;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
@@ -1707,9 +1707,9 @@ img {
 }
 
 .agreement {
-  display: -webkit-box;
+  /*display: -webkit-box;*/
   display: -ms-flexbox;
-  display: flex;
+  /*display: flex;*/
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1717,7 +1717,7 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  font-weight: 400;
+  /*font-weight: 400;*/
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
