--- a/css/main.css
+++ b/css/main.css
@@ -1134,9 +1134,9 @@ img {
 
 .overlay {
   width: 100%;
-  height: 294px;
+  height: 100%;
   overflow: hidden;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
 }
@@ -1511,6 +1511,7 @@ img {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1000;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
@@ -1736,7 +1737,7 @@ img {
 .agreemen__label {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  /*display: flex;*/
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
