--- a/css/main.css
+++ b/css/main.css
@@ -1136,9 +1136,10 @@ img {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
+  background: rgba(33, 150, 243, 0.9);
 }
 
 .overlay__content {
