--- a/css/main.css
+++ b/css/main.css
@@ -1135,8 +1135,10 @@ img {
 .overlay {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  /*overflow: hidden;*/
   position: absolute;
+  padding: 24px;
+  
   top: 0;
   left: 0;
   background: rgba(33, 150, 243, 0.9);
