--- a/css/main.css
+++ b/css/main.css
@@ -1111,7 +1111,9 @@ img {
 
 .list__link {
   position: relative;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1184,6 +1186,7 @@ img {
   border-style: solid;
   border-color: #eeeeee;
   border-top: 0;
+  flex-grow: 1;
 }
 
 .list__company {
@@ -1191,7 +1194,7 @@ img {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.06em;
   color: #212121;
 }
 
