--- a/css/main.css
+++ b/css/main.css
@@ -1053,15 +1053,17 @@ picture {
   position: absolute;
   top: 50%;
   left: 50%;
-  /*width: 528px;*/
-  min-height: 581px;
-  transform: translate(-50%, -50%) scale(1);
-  z-index: 1000;
-  overflow-y: scroll;
-  padding: 40px 40px;
-  background-color: #FFFFFF;
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+  -webkit-transition: -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: calc(100% - 15px);
+  max-width: 450px;
+  padding: 40px;
+  background-color: #ffffff;
   border-radius: 4px;
-  transition: opacity var(--main-transition), transform var(--main-transition);
 }
 
 .backdrop.is-hidden .modal {
